# ChangeLog for games-emulation/gr-lida
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  gr-lida-0.6.0.ebuild:
  eqmake4 dies on its own

  04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  gr-lida-0.6.0.ebuild:
  Fix header copyright

  08 Jul 2008; Sebastián Magrí - (sebasmagri) <sebasmagri@gmail.com>
  -gr-lida-0.5.0.ebuild, +gr-lida-0.6.0.ebuild:
  Version bump for GR-lida

  06 Jun 2008; Sebastián Magrí - (sebasmagri) <sebasmagri@gmail.com>
  -gr-lida-0.4.0.ebuild, +gr-lida-0.5.0.ebuild:
  Version bump for GR-lida

  04 Apr 2008; Sebastián Magrí (sebasmagri) <sebasmagri@gmail.com>
  ChangeLog:
  Erased previous version

  04 Apr 2008; Sebastián Magrí (sebasmagri) <sebasmagri@gmail.com>
  -gr-lida-0.3.4.ebuild, +gr-lida-0.4.0.ebuild:
  Version bump for GR-lida from 0.3.4 to 0.4.0

  23 Mar 2008; Jakub Moc <jakub@gentoo.org> gr-lida-0.3.4.ebuild:
  Get rid of the nasty qt4_min_version thing, attempt on fixing deps for
  qt-4.4 split ebuilds, einfo -> elog

  22 Mar 2008; (Tommy[D]) tommy100@gmx.de gr-lida-0.3.4.ebuild:
  Some cleanup, eqmake4 dies on its own

  22 Mar 2008; Sebastián Magrí (sebasmagri) <sebasmagri@gmail.com>
  +gr-lida-0.3.4.ebuild, +metadata.xml:
  New Ebuild for bug 213983 thanks to tommy, jokey, chithead, jeeves, juanfra
  and genstef
