@@ -1,4 +1,4 @@
 DIST GR-lida-0.6.0.tar.bz2 413770 RMD160 e01d5c87fe363ecf7978704de7cbdfc1edf793b3 SHA1 a70624a2007a1ef6a2206b3a3837317350804ddd SHA256 327b7c685a23ad489fa67d8af1cce0da18abee7e1b01909aefa96ed42acf1689
-EBUILD gr-lida-0.6.0.ebuild 853 RMD160 2d716cfe44413a7b1c49f838c354769654bc0bc8 SHA1 4a23c220ca2d30bb528be8b4e0dfa4745f90c8ee SHA256 679ff079216618444880f091dc2f0ad8f730948b69956940f4660999a66c2a7b
-MISC ChangeLog 1388 RMD160 03e9cebe53e2b176585a307b485c5aab290e44f2 SHA1 c5896f3b86265978b61f7fb1f4afe0b903ebd2ff SHA256 1fc49d2e409204c7ef0167dc603ecd73b8105c9d55ef4e54bea3d0e40f640f82
+EBUILD gr-lida-0.6.0.ebuild 930 RMD160 b67fcc39c45ff7a189b84fa89dd7f460e74bac95 SHA1 b333e556fb852d7587327f1c2fe7877740cd7f40 SHA256 63606d6a1c5ab887980205887e1852a379d31d1510775547f27a353df855c8d7
+MISC ChangeLog 1549 RMD160 e9339270baf6fefca619985581493af13433e37c SHA1 c43d20b7733b96015bd73a81a911218f7b503cf1 SHA256 333a51f2641db2115ba7f78d7c25f30fe10ddc969a29d12375b494970946cf30
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
