@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org>
+  gr-lida-0.6.0.ebuild:
+  Dont use qt4_min_version, it's deprecated. Migrate to split qt4 dependencies.
+
   04 Aug 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
   gr-lida-0.6.0.ebuild:
   eqmake4 dies on its own
